# pixi-template

./: .coveragerc  README.md  pyproject.toml
.github/workflows/: test.yml
src/pixi_template/: __init__.py
tests/: test_stub.py
