[project]
authors = [{name = "avcopan", email = "avcopan@gmail.com"}]
dependencies = []
name = "pixi-template"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

# Pixi configurations
[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.tasks]

[tool.pixi.feature.dev.tasks]
fmt = { cmd="ruff format ." }
lint = { cmd="ruff check . --fix" }
types = { cmd="ty check" }
test = { cmd="pytest" }
all = { depends-on = ["fmt", "lint", "types", "test"] }

[tool.pixi.pypi-dependencies]
pixi_template = { path = ".", editable = true }

[tool.pixi.dependencies]
numpy = ">=2.3.5,<3"
scipy = ">=1.16.3,<2"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.0.1"
pytest-cov = ">=7.0.0"
ruff = ">=0.14.7"
lefthook = ">=2.0.6,<3"

[tool.pixi.feature.dev.pypi-dependencies]
ty = "*"

# Ruff configurations
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # missing trailing comma (handled by format)
    "RUF022",   # `__all__` is not sorted
    "TID252",   # relative import
    "D203",     # confict: incorrect blank line before class (uses D211 instead)
    "D213",     # conflict: multi-line summary second line (uses D212 instead)
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

# Pytest configurations
[tool.pytest.ini_options]
testpaths = ["tests", "src"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"
